added backgroud navigation and id to background section.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul class="nav">
           <li class="name">Energy</li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#Background">Background</a></li>
         </ul>
     </div>
 
@@ -24,7 +25,7 @@
     <main class="flex">
       <div class="card">
 
-		<h2>Background</h2>
+		<h2 id="Background">Background</h2>
         <p>
             I’m an aspiring scientist and teacher. 
             Feel free to make up the information if you do not wish to share anything personal.
@@ -56,7 +57,7 @@
         <li><a href="https://www.linkedin.com/in/barackobama" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/Douglas1280W21" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2021, Energy</p>
     </footer>
   </body>
   </html>
