--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <li class="name">Energy</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html#Background">Background</a></li>
+          <li><a href="fun_facts.html">FunFacts</a></li>
         </ul>
     </div>
 
