--- a/fun_facts.html
+++ b/fun_facts.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Energy's fun fun_facts</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
 </head>
 <body>
-    
+    <div class="main-nav">
+        <ul class="nav">
+          <li class="name">Energy</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#Background">Background</a></li>
+          <li><a href="fun_facts.html">FunFacts</a></li>
+        </ul>
+    </div>
+
+
+
+    <footer>
+        <ul>
+          <li><a href="https://twitter.com/MikePompeo" class="social twitter">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/barackobama" class="social linkedin">LinkedIn</a></li>
+          <li><a href="https://github.com/Douglas1280W21" class="social github">Github</a></li>
+        </ul>
+        <p class="copyright">Copyright 2021, Energy</p>
+      </footer>
 </body>
 </html>
